Trying to fix a small styling issue
On mobile, leaderboard is off centre

--- a/style.css
+++ b/style.css
@@ -1017,7 +1017,8 @@ input {
         flex-direction: column;
         align-content: center;
         justify-content: space-around;
-        max-width: 100%;
+        width: 100%;
+        max-width: 100%
         margin: 22px 0 0 0;
         max-height: 300px;
     }
